Working on all spots tile wrapping css and fixed bug causing error when user navigates from newly created spot to all spots page

--- a/frontend/src/components/Spots/AllSpots/Spots.css
+++ b/frontend/src/components/Spots/AllSpots/Spots.css
@@ -9,6 +9,7 @@
     justify-self: center;
     align-self: center;
     max-width: 1424px;
+    margin: auto;
 }
 
 .cards {
@@ -17,4 +18,6 @@
     display: inline-flex;
     flex-wrap: wrap;
     gap: 2em;
+    max-width: 1424px;
+    margin: auto;
 }
